test/pass/57-generic-adt.perk
type <T> list = Empty | Cons(T, list)

fun main () : void {

    return;
}