test/fail/14-void_parameter.perk
fun f(a: void): void{
    skip
}